# makehuman

./: README_BEN.md  pyproject.toml
makehuman_torch/: README.md  __init__.py
makehuman_torch/scripts/functions/: config.py  idx_globals.py  idx_track.py  image_visualize.py  io_funcs.py  masking.py  modifier_processing.py  torch_implimentation.py
makehuman_torch/scripts/process/: extract_data_for_torch_model.py
makehuman_torch/test/: README.md  conftest.py  test_matrix_computations.py
makehuman_torch/test/test_support_code/: create_base_makehuman_data.py
