[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "makehuman"
version = "0.1.0"
description = "MakeHuman PyTorch implementation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bvh>=0.3",
    "ipython>=8.37.0",
    "numpy>=1.17.4",
    "pyopengl>=3.1.0",
    "pyqt5>=5.12.8",
    "torch>=2.0.0",
]

[tool.setuptools]
packages = ["makehuman_torch"]
